--- a/analytics/templates/analytics/home.html
+++ b/analytics/templates/analytics/home.html
@@ -203,7 +203,7 @@ checked/>
                         });
 
 
-                        $("nav div a").click(function () {
+                        $(".logo-nav a").click(function () {
                             if ($('#tab').hasClass('w-70') && ($(window).width() >767)) {
                                 $("#tab").removeClass('w-70');
                                 $("#my-tab").removeClass('w-70');
@@ -278,11 +278,7 @@ checked/>
                 z-index: 99999;
                 width: 300px !important;
 
-            {#.con {#}
-            {#    display: flex;#}
-            {#    justify-content: end;#}
-            {
-            #}#}
+
 
             }
 
@@ -296,6 +292,7 @@ checked/>
                 height: auto;
                 overflow-y: hidden;
                 position: relative;
+                margin-bottom: 50px;
 
 
             }
@@ -332,14 +329,16 @@ checked/>
             }
 
             .input-group .open ul {
-                height: 250px !important;
+                height: 400px !important;
                 overflow: scroll !important;
+                margin-bottom:10px;
             }
 
             .container1 .dropdown .dropdown-content {
-                height: 250px !important;
+                height: 450px !important;
                 overflow: scroll !important;
                 margin-bottom: 15px;
+                right:-10px;
             }
 
 
