--- a/home/templates/base_side.html
+++ b/home/templates/base_side.html
@@ -3,7 +3,7 @@
 {% block sidemenu %}
 
 <div class="hold bg">
-    <div class=" hold-1 sidebar-custom bg-dark" style="height:auto" id="side-nav">
+    <div class=" hold-1 sidebar-custom bg-dark" style="height:auto" >
         <div class="sidebar-sticky">
             <ul class="nav flex-column">
                 <li class="nav-item menu-item">
